--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>post list blog</h1>
 
-{% for p in post_list %}
+{% extends 'blog/base.html' %}
+
+{% block main_area %} <h1>blog</h1>
+
+    {% for p in post_list %}
+    <div class = 'card mb-4'>
+        {% if p.head_image %}
+            <img class = 'card-img-top' src='{{p.head_image.url}}' alt = '{{p}} head image'> 
+        {% else %}
+            <img class='card-img-top' src='https://picsum.photos/800/200' alt = 'random_image' >
+        {% endif %}
+    </div>
+
     <hr/>
     <h2><a href = '{{p.get_absolute_url}}'>{{p.title}}</a></h2>
-    <h2>{{p.sub_title}}</h2>
+    
+    {% if p.hook_text %}
+        <h5 class ='text-muted'>{{p.hook_text}}</h5>
+    {% endif %}
+
     <h2>{{p.created_at}}</h2>
     <h2>{{p.content}}</h2>
     <h2>{{p.content_comment}}</h2>
-{% endfor %}
+    {% endfor %}
 
-</body>
-</html>
+{% endblock %}
