--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,19 +2,25 @@
 {% extends 'blog/base.html' %}
 {% block head_title %} {{post.title}} -blog  {% endblock %}
 {% block main_area %} 
+    <div id='post-area'>
+        {% if post.category %}   
+                <span class='badge badge-secondary float-right'>{{post.category}}</span>
+        {% else %}
+            <span class='badge badge-secondary float-right'> unclassified </span>
+        {% endif %}
+        <h1 class = 'mt-4'>{{post.title}}</h1>
 
     {% if post.head_image %}
         <img class = 'img-fluid rounded' src='{{post.head_image.url}}' alt='{{post.title}} head_image' >
     {% else %}     
-        <img class ='img-fluid rounded' src = 'https://picsum.photos/800/200' alt = 'random_image'>
+        <img class ='img-fluid rounded' src = 'https://picsum.photos/seed/{{post.id}}/800/200' alt = 'random_image'>
     {% endif %}
-
-    <h1 class = 'mt-4'>{{post.title}}</h1>
+  
     <h5 class = 'text-muted'>{{post.hook_text}}</h5>
-    <h4>{{post.created_at}}</h4>s
-    <p>{{post.content}}</p>
+    <h4>{{post.created_at}}</h4>
+    <p>{{post.content | linebreaksbr}}</p>
     {% if post.file_upload %}
-        <a href='{{post.file_upload.url}}' class='btn btn-outLine-dark' role='button' > 
+        <a href='{{post.file_upload.url}}' class='btn btn-outLine-dark' role='button' download > 
             download :
             {% if post.get_file_ext == 'csv' %}
                 <i class = 'fas fas-file-csv'></i>
@@ -23,7 +29,7 @@
             {% elif post.get_file_ext == 'dock' or post.get_file_ext == 'doc' %}    
                 <i class = 'fas fas-file-word'></i>
             {% else %}
-                <i class = 'fas fas-file-file'></i>
+                <i class = 'far fa-file'></i>
             {% endif %}
             {{post.get_file_name}}
         </a>
@@ -34,5 +40,5 @@
     <p>{{post.content_comment}}</p>
     <hr/>
     <h3> here comment ? </h3>
-
+    </div>    
 {% endblock %}     
