--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     {% include 'blog/navbar.html' %}
-    {% block main_area %} {% endblock %}
+ 
+    <div class="container my-3">
+        <div class="row">
+            <div class="col-md-8 col-lg-9" id="main-area">
+                {% block main_area %} {% endblock %}
+            </div>
+            <div class="col-md-4 col-lg-3">
+                {% include 'blog/side.html' %}
+            </div>                
+        </div>
+    </div>
 
     {% include 'blog/footer.html' %}
   
@@ -18,4 +28,5 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/5df8273926.js" crossorigin="anonymous"></script>
 </body>
