--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,26 +2,39 @@
 {% extends 'blog/base.html' %}
 
 {% block main_area %} <h1>blog</h1>
-
+{% comment %} {% if post_list exists %}  {% endcomment %}
     {% for p in post_list %}
-    <div class = 'card mb-4'>
+    <div class='card mb-4' id='post-{{p.pk}}'>
         {% if p.head_image %}
-            <img class = 'card-img-top' src='{{p.head_image.url}}' alt = '{{p}} head image'> 
+            <img class='card-img-top' src='{{p.head_image.url}}' alt = '{{p}} head image'> 
         {% else %}
-            <img class='card-img-top' src='https://picsum.photos/800/200' alt = 'random_image' >
+            <img class='card-img-top' src='https://picsum.photos/seed/{{p.id}}/800/200' alt = 'random_image' >
         {% endif %}
+        <div class='card-body'>
+            {% if p.category %}   
+                <span class='badge badge-secondary float-right'>{{p.category}}</span>
+            {% else %}
+                <span class='badge badge-secondary float-right'> unclassified </span>
+            {% endif %}
+            <h2 class="card-title">{{p.title}}</h2>
+            <p class='cart-text'>{{p.content|truncatewords:45}}</p>
+            <a class='btn btn-primary' href = '{{p.get_absolute_url}}'> read morea & rarr;</a>
+        </div>
+
+            {% if p.hook_text %}
+                <h5 class ='text-muted'>{{p.hook_text}}</h5>
+            {% endif %}
+        <div class='card-footer text-muted'>
+            Posted on {{p.created_at}} by 
+            <a class='btn btn-primary' href = '#'>{{p.author | upper}} </a>
+            <h2>{{p.content_comment}}</h2>
+        </div>
     </div>
-
-    <hr/>
-    <h2><a href = '{{p.get_absolute_url}}'>{{p.title}}</a></h2>
-    
-    {% if p.hook_text %}
-        <h5 class ='text-muted'>{{p.hook_text}}</h5>
-    {% endif %}
-
-    <h2>{{p.created_at}}</h2>
-    <h2>{{p.content}}</h2>
-    <h2>{{p.content_comment}}</h2>
     {% endfor %}
 
+{% comment %} {% else %}
+    <h3> there is no content </h3>
+{% endif %} {% endcomment %}
+
 {% endblock %}
+
