--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -13,6 +13,8 @@
     <title>about_me</title>
 </head>
 <body>
+   
+  <div class='container'>
     <h1>about_me</h1>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
@@ -50,13 +52,20 @@
           </form>
         </div>
       </nav>
-    <nav>
-        <a href="/blog/">blog </a>
-        <a href="/about_me/">about_me</a>
-    </nav>
-    <h1>good day </h1>
-    <h2>record</h2>
-    <h2>port folio </h2>
-    <h3>  still working </h3>
+    
+      <br>
+      <br>
+  
+      <nav>
+          <a href="/blog/">blog </a>
+          <a href="/about_me/">about_me</a>
+      </nav>
+      <h1>good day </h1>
+      <h2>record</h2>
+      <h2>port folio </h2>
+      <h3>  still working </h3>
+    </div>
+
+   
 </body>
 </html>
