--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="/about_me/">about_me <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href=" ">landing</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
@@ -60,6 +60,17 @@
           <a href="/blog/">blog </a>
           <a href="/about_me/">about_me</a>
       </nav>
+
+        
+      <div class="card" style="width: 18rem;">
+        <img src="./images/image/apple_fuji/fuji-1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">fuji </h5>
+          <p class="card-text">fuji 50000원</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
       <h1>good day </h1>
       <h2>record</h2>
       <h2>port folio </h2>
