--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -13,6 +13,7 @@
     <title>landing </title>
 </head>
 <body>
+  <div class='container'>
     <h1>landing </h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <a class="navbar-brand" href="/blog/"> blog </a>
@@ -25,7 +26,7 @@
               <a class="nav-link" href="/about_me/"> about_me <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href=" ">landing</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
@@ -45,12 +46,24 @@
       </nav>
 
    
-<nav>
-    <a href="/blog/">blog</a>
-    <a href="/about_me">abtout_me</a>
-</nav>
-<h1> good day  </h1>
-<h2> front page</h2>
-<h3> not yet complete </h3>
+    <nav>
+        <a href="/blog/">blog</a>
+        <a href="/about_me">abtout_me</a>
+    </nav>
+
+    <div class="card" style="width: 18rem;">
+      <img src="images/image/apple_fuji/fuji-1.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">fuji </h5>
+        <p class="card-text">fuji 50000원</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+
+    <h1> good day  </h1>
+    <h2> front page</h2>
+    <h3> not yet complete </h3>
+  </div>  
 </body>
 </html>
