--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,25 +16,46 @@
         <img class ='img-fluid rounded' src = 'https://picsum.photos/seed/{{post.id}}/800/200' alt = 'random_image'>
     {% endif %}
   
-    <h5 class = 'text-muted'>{{post.hook_text}}</h5>
-    <h4>{{post.created_at}}</h4>
+    <p class = 'text-muted'>{{post.hook_text}}</p>
+    <p class='lead'>
+        by 
+        <a href='#'>{{post.author | upper}}</a>
+    </p>
+    <hr>
+    {% if user.is_authenticated and user == post.author %}
+        <a class='btn btn-info btn-sm float-right' href='/blog/update_post/{{post.pk}}/' role='button'>
+            <i class='fas fa-pen'></i> edit post
+        </a>
+    {% endif %}   
+
+    <p>Posted on {{post.created_at}}</p>
     <p>{{post.content | linebreaksbr}}</p>
+
+    {% if post.tags.exists %}
+        <i class='fas fa-tags'></i>
+        {% for tag in post.tags.iterator %}
+            <a href='{{tag.get_absolute_url}}'>
+                <span class='badge badge-pill badge-light'>{{tag}}</span>        
+            </a>
+        {% endfor %}
+        <br/>
+    <br/>
+    {% endif %}    
+
     {% if post.file_upload %}
         <a href='{{post.file_upload.url}}' class='btn btn-outLine-dark' role='button' download > 
             download :
             {% if post.get_file_ext == 'csv' %}
-                <i class = 'fas fas-file-csv'></i>
+                <i class = 'fas fa-file-csv'></i>
             {% elif post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}    
-                <i class = 'fas fas-file-excel'></i>
+                <i class = 'fas fa-file-excel'></i>
             {% elif post.get_file_ext == 'dock' or post.get_file_ext == 'doc' %}    
-                <i class = 'fas fas-file-word'></i>
+                <i class = 'fas fa-file-word'></i>
             {% else %}
                 <i class = 'far fa-file'></i>
             {% endif %}
             {{post.get_file_name}}
         </a>
-
-
 
     {% endif %}
     <p>{{post.content_comment}}</p>
