--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,4 +1,5 @@
 
+{% load socialaccount %}
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class='container'>
     <a class="navbar-brand" href="./index.html"> do it django  </a>
@@ -18,6 +19,10 @@
         <li class="nav-item">
           <a class="nav-link" href="/about_me/"> about me</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/blog/create_post/"> create_post</a>
+        </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
             Dropdown link
@@ -29,6 +34,62 @@
           </div>
         </li>
       </ul>
+
+      <ul class="navbar-nav ml-auto">
+        {% if user.is_authenticated %}
+          <li class="nav-item" dropdown>
+              <a class="nav-link dropdown-toggle" href="#"  id='navbarNavDropdownMenuLink' role='button'
+                  data-toggle="dropdown" aria-haspopup='true' area-expanded='false'>{{user.username}}</a>
+              <div class='dropdown-menu' aria-labelledby='navbarNavDropdownMenuLink'>
+                <a class='dropdown-item' href='/accounts/logout/'> log out </a>
+              </div>
+          </li>
+        {% else %}
+          <li class='nav-item'>
+            <a class='nav-link' href='#' data-toggle='modal' data-target='#loginModal'> log in </a>
+          </li>
+        {% endif %}
+      </ul>
     </div>
   </div>  
 </nav>
+
+<!-- Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="logInModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="loginModalLabel"> <i class="fas fa-sign-in-alt"></i>&nbsp Log In</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-6">
+                      <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="{% provider_login_url 'google' %}">
+                        <i class="fab fa-google"></i>&nbsp;&nbsp; Log in with Google
+                      </a>
+                      <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="/accounts/login/">
+                        <i class="fab fa-envelope"></i>&nbsp;&nbsp; Log in with username
+                      </a>
+                    </div>
+                    <div class='col-md-6'>
+                      <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="/accounts/signup/">
+                        <i class="fab fa-envelope"></i>&nbsp;&nbsp; sign up with e-mail 
+                      </a>
+
+                    </div>
+                    <div class="col-md-6">
+                        <button type="button" class="btn btn-outline-dark btn-block btn-sm">
+                          <i class="far fa-envelope"></i>&nbsp;&nbsp; Sign Up with E-mail</button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
