--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -29,7 +29,7 @@
     {% endif %}   
 
     <p>Posted on {{post.created_at}}</p>
-    <p>{{post.content | linebreaksbr}}</p>
+    <p>{{post.get_content_markdown | safe}}</p>
 
     {% if post.tags.exists %}
         <i class='fas fa-tags'></i>
