--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base_full_width.html' %}
-
+{% {% load crispy_forms_tags %}%}
 {% block head_title %} create post - blog  {% endblock %}
 
 {% block main_area %} 
@@ -9,10 +9,20 @@
 
 <form method='post' enctype='multipart/form-data'>{% csrf_token %}
     <table>
-        {{form}}
+        {{form | crispy}}
+        <div id='div_id_tags_str'>
+            <label for='id_tags_str'> tags : </label>
+            <input type='text' name='tags_str' id='id_tags_str' class='textinput textImput form-control'>
+        </div>
+        <br>
+        {% comment %} <tr>
+            <th><label for='id_tags_str'> tags : </label></th>
+            <td><input type='text' name='tags_str' id='id_tags_str'></td>
+        </tr> {% endcomment %}
     </table>
     <button type='submit' class='btn btn-primary float-right'> submit </button>
 </form>
+{{form.media}}
 
 {% endblock %}
 
