--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -9,9 +9,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/"> home </a>
-        </li>
+       
         <li class="nav-item">
           <a class="nav-link" href="/blog/"> blog </a>
         </li>
@@ -19,6 +17,11 @@
         <li class="nav-item">
           <a class="nav-link" href="/about_me/"> about me</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="/"> landing </a>
+        </li>
+
         <li class="nav-item">
           <a class="nav-link" href="/blog/create_post/"> create_post</a>
         </li>
