--- a/blog/templates/blog/side.html
+++ b/blog/templates/blog/side.html
@@ -11,6 +11,8 @@
     </div>
 </div>
 
+<script type="text/javascript" src="/static/blog/js/search.js"></script>
+
 <!-- Categories Widget -->
 <div class="card my-4" id="categories-card">
     <h5 class="card-header">Categories</h5>
