--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,7 @@
 
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
+
 {% block head_title %} {{post.title}} -blog  {% endblock %}
 {% block main_area %} 
     <div id='post-area'>
@@ -27,6 +29,7 @@
             <i class='fas fa-pen'></i> edit post
         </a>
     {% endif %}   
+
 
     <p>Posted on {{post.created_at}}</p>
     <p>{{post.get_content_markdown | safe}}</p>
@@ -60,6 +63,88 @@
     {% endif %}
     <p>{{post.content_comment}}</p>
     <hr/>
+
     <h3> here comment ? </h3>
-    </div>    
+    </div>
+    <div id='comment-area' >
+        <!--comments form -->
+        <div class='card my-4'>
+            <h5 class='card-header'> leave a comment </h5>
+            <div class='card-body'>
+                {% if user.is_authenticated %}
+                <form id='comment-form' method='POST' action='{{post.get_absolute_url}}new_comment/'>
+                    {% csrf_token %}
+                    <div class='form-group'>
+                        {{comment_form | crispy}}
+                    </div>
+                    <button type='submit' class='btn btn-primary'> submit </button>
+                </form>
+                {% else %}
+                    <a role='button' class='btn btn-outline-dark btn-block btn-sm' href='#'
+                        data-toggle='modal' data-target='#loginModal'> log in and leave a comment
+                    </a>
+                {% endif %}
+            </div>
+        </div>
+
+        {% if post.comment_set.exists %}
+            {% for comment in post.comment_set.iterator %}
+            <!--  single comment -->
+            <div class='media mb-4' id='comment-{{comment.pk}}'>
+                <img class='d-flex mr-3 rounded-circle' src='comment.get_avatar_url' alt='{{comment.author}}' width='60px' >
+                <div class='media-body'>
+                    {% if user.is_authenticated and comment.author == user %}
+                    <div class='float-right'>
+
+                        <a role='button' class='btn btn-sm btn-info ' 
+                            id='comment-{{comment.pk}}-update-btn' href='/blog/update_comment/{{comment.pk}}'> edit
+                        </a>
+                        <a role='button' class='btn btn-sm btn-danger' data-toggle='modal' 
+                            data-target='#deleteCommentModal-{{comment.pk}}'
+                            id='comment-{{comment.pk}}-delete-modal-btn' href='#'> delete
+                        </a> 
+                    </div>
+                    
+                                <!-- Modal -->
+                    <div class="modal fade" id="deleteCommentModal-{{comment.pk}}" tabindex="-1" role="dialog" 
+                    aria-labelledby="deleteCommentModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteModalLabel"> are you sure ? </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <del>{{comment | linebreaks}}</del>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <a role='button' class='btn btn-danger' href='/blog/delete_comment/{{comment.pk}}'>
+                            Delete
+                        </a>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+
+                    {% endif %}
+                    <h5 class='mt-0'>{{comment.author.username}} &nbsp; &nbsp;
+                        <small class='text-muted'>{{comment.created_at}}</small> 
+                    </h5>
+                    <p>{{comment.content | linebreaks}}</p>
+                    {% if comment.created_at != comment.modified_at %}
+                        <p class='text-muted float-right'>
+                            <small> updated : {{comment.modified_at}}</small>
+                        </P>
+                    {% endif %}
+                </div>
+            </div>
+            {% endfor %}
+        {% endif %}
+    </div>
+    <hr/>
+
+
 {% endblock %}     
