--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -1,30 +1,23 @@
 {% extends 'blog/base_full_width.html' %}
 {% load crispy_forms_tags %}
-{% block head_title %} create post - blog  {% endblock %}
+{% block head_title %}Edit Post - Blog{% endblock %}
 
-{% block main_area %} 
-
-    <h1> edit post  </h1>
-</hr/>
-
-<form method='post' enctype='multipart/form-data'>{% csrf_token %}
-    <table>
-        {{form | crispy}}
-        <div id='div_id_tags_str' >
-            <label for='id_tags_str'> tags: </label>
-            <input type='text' name='tags-str' id='id_tags_str' 
-                 class='textinput textImput form-control' value='{{tags_str_default}}'>
+{% block main_area %}
+    <h1>Edit Post</h1>
+    <hr/>
+    <form method="post" enctype="multipart/form-data">{% csrf_token %}
+        {{ form | crispy }} 
+        <!-- 적용하고 싶은 폼에 아래와 같이 '| crispy' 붙이기 -->
+        <div id="div_id_tags_str">
+            <label for="id_tags_str">Tags:</label>
+            <input type="text" name="tags_str" id="id_tags_str" class="textinput textInput form-control">
         </div>
-        <br>
+        <br/>
 
-        {% comment %} <tr>
-            <th><label for='id_tags_str'> tags: </label></th>
-            <td><input type='text' name='tags-str' id='id_tags_str' value='{{tags_str_default}}'></td>
-        </tr> {% endcomment %}
-    
-    </table>
-    <button type='submit' class='btn btn-primary float-right'> submit </button>
-</form>
-
+        <button type="submit" class="btn btn-primary float-right">Submit</button>
+    </form>
+    {{form.media}}
 {% endblock %}
+
+
 
