--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -13,70 +13,66 @@
     <title>about_me</title>
 </head>
 <body>
-   
-  <div class='container'>
-    <h1>about_me</h1>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="/blog/">blog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/about_me/">about_me <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=" ">landing</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
-    
-      <br>
-      <br>
-  
-      <nav>
-          <a href="/blog/">blog </a>
-          <a href="/about_me/">about_me</a>
-      </nav>
+{% include 'blog/navbar.html' %}   
 
-        
-      <div class="card" style="width: 18rem;">
-        <img src="./images/image/apple_fuji/fuji-1.jpg" class="card-img-top" alt="...">
+<div class='container'>
+       <br>
+       <br>
+   <div class='row'>  
+
+    <div class='col'>   
+      <div class="card my-4" style="width: 18rem;">
+        <img src="../static/images/apple_fuji/fuji-2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">fuji </h5>
-          <p class="card-text">fuji 50000원</p>
+          <p class="card-text">fuji 50,000원</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
+    </div>
+    
+    <div class='col'>  
+      <div class="card my-4" style="width: 18rem;">
+        <img src="../static/images/apple_fuji/fuji-3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">fuji-2 </h5>
+          <p class="card-text">fuji-2 55,000원</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    
+    <div class='col'>  
+      <div class="card my-4" style="width: 18rem;">
+        <img src="../static/images/apple_fuji/fuji-4.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">fuji-3 </h5>
+          <p class="card-text">fuji-3 60,000원</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
 
-      <h1>good day </h1>
+    </div>
+
+    <div class='col'>  
+      <div class="card my-4" style="width: 18rem;">
+        <img src="../static/images/apple_fuji/fuji-5.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">fuji-4 </h5>
+          <p class="card-text">fuji-4 65,s000원</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>   
+    </div>
+
+    <div class="card my-4">
+      <h1> about-me.html </h1>
       <h2>record</h2>
       <h2>port folio </h2>
       <h3>  still working </h3>
     </div>
 
-   
+{% include 'blog/footer.html' %}   
 </body>
 </html>
