--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -7,52 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"  crossorigin="anonymous">
     <script defer src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    
+    <script src="https://kit.fontawesome.com/5df8273926.js" crossorigin="anonymous"></script>
     <title>landing </title>
 </head>
 <body>
+{% include 'blog/navbar.html' %} 
+  <br>
+  <br>
   <div class='container'>
-    <h1>landing </h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a class="navbar-brand" href="/blog/"> blog </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="/about_me/"> about_me <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href=" ">landing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                Dropdown link
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-   
-    <nav>
-        <a href="/blog/">blog</a>
-        <a href="/about_me">abtout_me</a>
-    </nav>
-
+    
     <div class="card" style="width: 18rem;">
-      <img src="images/image/apple_fuji/fuji-1.jpg" class="card-img-top" alt="...">
+      <img src="../static/images/apple_fuji/fuji-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">fuji </h5>
         <p class="card-text">fuji 50000원</p>
@@ -61,9 +28,11 @@
     </div>
 
 
-    <h1> good day  </h1>
+    <h1> landing.html </h1>
     <h2> front page</h2>
     <h3> not yet complete </h3>
-  </div>  
+  </div> 
+
+{% include 'blog/footer.html' %}
 </body>
 </html>
