complete about me

--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -44,7 +44,7 @@
               <a class="nav-link dropdown-toggle" href="#"  id='navbarNavDropdownMenuLink' role='button'
                   data-toggle="dropdown" aria-haspopup='true' area-expanded='false'>{{user.username}}</a>
               <div class='dropdown-menu' aria-labelledby='navbarNavDropdownMenuLink'>
-                <a class='dropdown-item' href='/accounts/logout/'> log out </a>
+                <a class='dropdown-item float-right' href='/accounts/logout/'> log out </a>
               </div>
           </li>
         {% else %}
