--- a/blog/templates/blog/side.html
+++ b/blog/templates/blog/side.html
@@ -5,7 +5,7 @@
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Search for..." id="search-input">
             <span class="input-group-btn">
-                    <button class="btn btn-secondary" type="button" onclick="searchPost();">Go!</button>
+                    <button class="btn btn-secondary" type="button" onclick="searchPost()">Go !</button>
                 </span>
         </div>
     </div>
